--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ h2 {
   text-align: center;
 }
 .column {
-  flex-basis: 25%;
+  flex-basis: 20%;
   padding: 0 4px;
+  box-sizing: border-box;
 }
 .footer {
   background-color: #888888;
@@ -66,11 +67,21 @@ h2 {
 img {
   width: 100%;
 }
-.pic1 {
-  width: 40%;
-}
-@media screen and (min-width: 600px) and (max-width: 800px) {
+@media screen and (max-width: 800px) {
+  .p-pic {
+    flex-basis: 100%;
+  }
   .column {
     flex-basis: 50%;
+    padding: 0 4px;
+    box-sizing: border-box;
+  }
+  .description {
+    flex-basis: 100%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .column {
+    flex-basis: 100%;
   }
 }
